finished lessson on images 23.03

--- a/uib/23_03/index.html
+++ b/uib/23_03/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     
+    <a href="https://unsplash.com">
     <img src="./images/pexels-pixabay-63294.jpg" alt="parking garage full of cars">
+    </a>
 
     <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris accumsan felis purus, ut mollis ex consequat a. Quisque elementum consectetur enim, at tristique mi faucibus id. Proin pulvinar dignissim mi, sit amet congue mauris sagittis in. Curabitur ante turpis, rhoncus a lobortis in, elementum id eros. Vestibulum viverra ligula a massa tincidunt dignissim. Vivamus vehicula pellentesque dui, et viverra arcu convallis ut. Fusce nec purus vel tellus malesuada vestibulum.
@@ -33,6 +35,9 @@
     <p>  
         Morbi hendrerit lacus ex. Quisque nec pellentesque nunc. Cras sit amet purus ac diam placerat commodo id vitae metus. Duis consequat lectus sollicitudin odio commodo, id feugiat ante porttitor. Morbi elementum justo in lacus fringilla congue. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam rutrum egestas dolor, vel molestie lectus fringilla at. Nulla mauris nunc, consectetur vel ligula eget, fringilla pretium dolor. Etiam euismod mi sit amet tempus euismod. Maecenas nunc risus, suscipit in vulputate vitae, dictum eu metus. Fusce et elit faucibus quam tempus tempus suscipit quis lectus.
     </p>  
+
+    
+    <img class="penguin" src="./images/penguin.jpeg" alt="cute penguin 🐧 ">
 
    
 </body>
