added practice about grid - afternoon

--- a/uib/03_05/index.html
+++ b/uib/03_05/index.html
@@ -37,9 +37,88 @@
             </div>
             <div>second</div>
             <div>third</div>
-            <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore recusandae a sit fuga? Enim, a ipsa excepturi ratione placeat repellat! Facere voluptatem ipsum fugiat aut tempora fugit, beatae quod quis tempore tenetur odit laborum libero at! Quo consequatur assumenda ab libero tenetur, error alias, facere doloribus officiis, magni autem. Itaque aut delectus a cupiditate rerum odit? Fugit, animi optio eius modi eligendi mollitia repudiandae odit quod nesciunt facilis cum odio unde reprehenderit corporis nostrum adipisci porro consequatur quaerat accusamus aspernatur tempore nemo. Nesciunt harum sapiente, inventore nam deleniti minima tenetur quibusdam aspernatur dignissimos nemo dolorum, similique dolorem sit voluptatum nostrum ducimus tempora molestias ratione placeat tempore omnis neque quos impedit necessitatibus. Molestiae reiciendis ratione officia ab veniam, impedit dignissimos odio voluptate. Inventore totam neque officia eveniet cumque incidunt quam consequatur deserunt cupiditate nisi veritatis possimus reiciendis explicabo dolores voluptatum voluptas consectetur, optio exercitationem quidem amet molestias, atque libero numquam nihil! Similique minima officiis, culpa, impedit atque, sequi odio nulla corrupti corporis quidem ea veritatis eos nisi est. Quod similique quis est ea assumenda ipsum modi quisquam officiis necessitatibus placeat fuga deserunt distinctio consequuntur atque id dolores, earum esse reprehenderit magni dolorum in sed commodi? Id, eius, et fugit est ut veritatis facere, laudantium rem sint veniam incidunt aliquam doloremque nesciunt minima. Nesciunt, earum commodi veritatis qui enim incidunt totam ratione illum maxime magni omnis excepturi rerum sint fuga ipsam reprehenderit beatae temporibus! Sequi corporis dolore numquam in. Molestias aut possimus ipsa ab. Alias sapiente cumque labore provident dicta saepe non explicabo libero id. Dolorum incidunt, rem vel quas, nostrum laborum illo, dolore fuga nisi accusamus ipsum laudantium hic provident reiciendis rerum commodi explicabo doloremque reprehenderit quaerat esse temporibus! Numquam illum quidem mollitia facilis enim accusamus illo quasi sunt similique porro corrupti pariatur distinctio magni sequi asperiores, est molestias minima repudiandae, quia quas quo ratione! Nostrum, error, consectetur eos unde itaque consequuntur provident cum ex aperiam est, reprehenderit quam debitis. Qui assumenda voluptates fugit nostrum magni consequuntur mollitia vitae laborum dicta debitis, exercitationem repellat aliquam suscipit obcaecati aut velit beatae in! Atque nisi repudiandae praesentium officia dolore incidunt id, provident modi suscipit neque labore at minima debitis, quo sunt odio deleniti nobis molestiae tempore corrupti odit veniam. Doloremque ipsam molestias voluptatem dignissimos perspiciatis! Libero, quaerat ab eaque nihil quod adipisci aperiam rem delectus dicta animi aliquam. Eligendi, obcaecati neque libero tempora labore, voluptatum error quidem dolor quisquam pariatur voluptate aut magnam nihil fugit, incidunt quod asperiores vero! Nihil, facilis. Dolores iure animi magni cupiditate, numquam odit soluta magnam nisi. Animi nostrum est veniam explicabo, culpa quo doloremque cupiditate expedita quasi voluptatum itaque inventore, ratione reprehenderit consectetur. Voluptas rem veniam, deserunt asperiores excepturi illo minus temporibus qui, numquam tenetur necessitatibus corrupti. Alias fuga reiciendis culpa neque nesciunt non dolorum nihil recusandae enim velit eius itaque, quam aliquam aspernatur assumenda, natus commodi consequatur minima magni sint veritatis error laborum, a dicta? Itaque natus dolor tempore eaque cum mollitia animi. Recusandae, sunt quae corporis ratione similique sit natus nobis. Provident ducimus nostrum pariatur dignissimos.</div>
+            <div>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore
+                recusandae a sit fuga? Enim, a ipsa excepturi ratione placeat
+                repellat! Facere voluptatem ipsum fugiat aut tempora fugit,
+                beatae quod quis tempore tenetur odit laborum libero at! Quo
+                consequatur assumenda ab libero tenetur, error alias, facere
+                doloribus officiis, magni autem. Itaque aut delectus a
+                cupiditate rerum odit? Fugit, animi optio eius modi eligendi
+                mollitia repudiandae odit quod nesciunt facilis cum odio unde
+                reprehenderit corporis nostrum adipisci porro consequatur
+                quaerat accusamus aspernatur tempore nemo. Nesciunt harum
+                sapiente, inventore nam deleniti minima tenetur quibusdam
+                aspernatur dignissimos nemo dolorum, similique dolorem sit
+                voluptatum nostrum ducimus tempora molestias ratione placeat
+                tempore omnis neque quos impedit necessitatibus. Molestiae
+                reiciendis ratione officia ab veniam, impedit dignissimos odio
+                voluptate. Inventore totam neque officia eveniet cumque incidunt
+                quam consequatur deserunt cupiditate nisi veritatis possimus
+                reiciendis explicabo dolores voluptatum voluptas consectetur,
+                optio exercitationem quidem amet molestias, atque libero numquam
+                nihil! Similique minima officiis, culpa, impedit atque, sequi
+                odio nulla corrupti corporis quidem ea veritatis eos nisi est.
+                Quod similique quis est ea assumenda ipsum modi quisquam
+                officiis necessitatibus placeat fuga deserunt distinctio
+                consequuntur atque id dolores, earum esse reprehenderit magni
+                dolorum in sed commodi? Id, eius, et fugit est ut veritatis
+                facere, laudantium rem sint veniam incidunt aliquam doloremque
+                nesciunt minima. Nesciunt, earum commodi veritatis qui enim
+                incidunt totam ratione illum maxime magni omnis excepturi rerum
+                sint fuga ipsam reprehenderit beatae temporibus! Sequi corporis
+                dolore numquam in. Molestias aut possimus ipsa ab. Alias
+                sapiente cumque labore provident dicta saepe non explicabo
+                libero id. Dolorum incidunt, rem vel quas, nostrum laborum illo,
+                dolore fuga nisi accusamus ipsum laudantium hic provident
+                reiciendis rerum commodi explicabo doloremque reprehenderit
+                quaerat esse temporibus! Numquam illum quidem mollitia facilis
+                enim accusamus illo quasi sunt similique porro corrupti pariatur
+                distinctio magni sequi asperiores, est molestias minima
+                repudiandae, quia quas quo ratione! Nostrum, error, consectetur
+                eos unde itaque consequuntur provident cum ex aperiam est,
+                reprehenderit quam debitis. Qui assumenda voluptates fugit
+                nostrum magni consequuntur mollitia vitae laborum dicta debitis,
+                exercitationem repellat aliquam suscipit obcaecati aut velit
+                beatae in! Atque nisi repudiandae praesentium officia dolore
+                incidunt id, provident modi suscipit neque labore at minima
+                debitis, quo sunt odio deleniti nobis molestiae tempore corrupti
+                odit veniam. Doloremque ipsam molestias voluptatem dignissimos
+                perspiciatis! Libero, quaerat ab eaque nihil quod adipisci
+                aperiam rem delectus dicta animi aliquam. Eligendi, obcaecati
+                neque libero tempora labore, voluptatum error quidem dolor
+                quisquam pariatur voluptate aut magnam nihil fugit, incidunt
+                quod asperiores vero! Nihil, facilis. Dolores iure animi magni
+                cupiditate, numquam odit soluta magnam nisi. Animi nostrum est
+                veniam explicabo, culpa quo doloremque cupiditate expedita quasi
+                voluptatum itaque inventore, ratione reprehenderit consectetur.
+                Voluptas rem veniam, deserunt asperiores excepturi illo minus
+                temporibus qui, numquam tenetur necessitatibus corrupti. Alias
+                fuga reiciendis culpa neque nesciunt non dolorum nihil
+                recusandae enim velit eius itaque, quam aliquam aspernatur
+                assumenda, natus commodi consequatur minima magni sint veritatis
+                error laborum, a dicta? Itaque natus dolor tempore eaque cum
+                mollitia animi. Recusandae, sunt quae corporis ratione similique
+                sit natus nobis. Provident ducimus nostrum pariatur dignissimos.
+            </div>
             <div>fifth</div>
             <div>sixth</div>
         </div>
+
+        <section class="container-3">
+            <article class="orange">orange</article>
+            <article>orange</article>
+            <article class="yell-green">
+                yellow green Lorem ipsum dolor, sit amet consectetur adipisicing
+                elit. Consectetur, corporis.
+            </article>
+            <article>yellowgreen</article>
+            <article>yellowgreen</article>
+            <article>orange</article>
+            <article>orange</article>
+            <article>yellowgreen</article>
+            <article>orange</article>
+            <article>orange</article>
+        </section>
     </body>
 </html>
