--- a/uib/04_05/index.html
+++ b/uib/04_05/index.html
@@ -33,7 +33,7 @@
             <div>4</div>
             <div>5</div>
             <div>6</div>
-            <div>
+            <div id="child7">
                 <div>1st-gc</div>
                 <div>2nd-gc</div>
                 <div>3rd-gc</div>
